// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render  Dashboard 1`] = `
<div>
  DashBoardPage content
</div>
`;

exports[`should render Expense Dashboard 1`] = `
<div>
  <Connect(ExpenseSummary) />
  <Connect(ExpenseListFilters) />
  <Connect(ExpenseList) />
</div>
`;
